Revision history for firebird_fdw

1.1.0	2018-12-??
	- Add utility function "firebird_fdw_close_connections()"
	- Adapt code to deal with tuple-level OID removal in PostgreSQL 12

1.0.0	2018-11-09
	- Support Firebird BOOLEAN datatype (Firebird 3.0 and later)
	- Improve "IMPORT FOREIGN SCHEMA" implementation
	- Add table option "estimated_row_count"
	- Improve handling of foreign tables defined as Firebird queries
	- Support PostgreSQL 11
	- Adapt code to compile against current PostgreSQL HEAD
	- Avoid segfault if not all expected Firebird connection parameters
	  were supplied

0.5.0	2018-10-12
	- Support triggers on foreign tables (PostgreSQL 9.4 and later)
	- Support Firebird BLOB datatype (TEXT subtype only)

0.4.0   2018-10-02
	- Add function firebird_fdw_version()
	- Add TAP tests
	- Fix bug in INSERT ... RETURNING ...
	- Miscellaneous minor bug fixes and code cleanup

0.3.0   2018-04-22
	- Support PostgreSQL 9.6 and 10
	- Add support for IMPORT FOREIGN SCHEMA (PostgreSQL 9.5 and later)
	- Ensure tables defined with the 'query' option actually work
	- Automatically reconnect if Firebird goes away
	- Update function calls for changes in libfq 0.2.0
	- Improve SIGINT handling
	- Improve error message handling
	- Fix memory error when generating connection string
	- Fix crash when multibyte string overflows (GitHub #5)
	- Report transaction errors as actual errors; log harmless
	  unhandled transaction types as DEBUG rather than as WARNING
	- General code cleanup

0.2.5   2014-02-11
        - Add RPM spec files for openSUSE and Red Hat

0.2.4   2014-02-06
        - libfq now supports a "client_encoding" connection parameter,
          which enables us to cover most reasonably common encoding
          combinations by passing the value provided by
          GetDatabaseEncodingName() to Firebird. See caveat in code
          regarding compatibility between PostgreSQL and Firebird encoding
          names.

0.2.3   2014-02-02