@@ -108,10 +108,12 @@ enum FdwModifyPrivateIndex
 extern Datum firebird_fdw_handler(PG_FUNCTION_ARGS);
 extern Datum firebird_fdw_version(PG_FUNCTION_ARGS);
 extern Datum firebird_fdw_close_connections(PG_FUNCTION_ARGS);
+extern Datum firebird_fdw_diag(PG_FUNCTION_ARGS);
 
 PG_FUNCTION_INFO_V1(firebird_fdw_handler);
 PG_FUNCTION_INFO_V1(firebird_fdw_version);
 PG_FUNCTION_INFO_V1(firebird_fdw_close_connections);
+PG_FUNCTION_INFO_V1(firebird_fdw_diag);
 
 extern void _PG_init(void);
 
@@ -252,7 +254,7 @@ extractDbKeyParts(TupleTableSlot *planSlot,
 				  Datum *datum_oid);
 
 
-/*
+/**
  * firebird_fdw_version()
  *
  * Return the version number as an integer.
@@ -263,7 +265,7 @@ firebird_fdw_version(PG_FUNCTION_ARGS)
 	PG_RETURN_INT32(FIREBIRD_FDW_VERSION);
 }
 
-/*
+/**
  * firebird_fdw_close_connections()
  *
  * Close all open connections
@@ -273,6 +275,106 @@ firebird_fdw_close_connections(PG_FUNCTION_ARGS)
 {
 	firebirdCloseConnections(true);
 	PG_RETURN_VOID();
+}
+
+
+/**
+ * firebird_fdw_diag()
+ *
+ * Return diagnostic information
+ */
+Datum
+firebird_fdw_diag(PG_FUNCTION_ARGS)
+{
+	ReturnSetInfo *rsinfo = (ReturnSetInfo *) fcinfo->resultinfo;
+	TupleDesc	tupdesc;
+	Tuplestorestate *tupstore;
+	MemoryContext per_query_ctx;
+	MemoryContext oldcontext;
+
+	StringInfoData setting;
+
+	Datum		values[2];
+	bool		nulls[2];
+
+	/* check to see if caller supports this function returning a tuplestore */
+	if (rsinfo == NULL || !IsA(rsinfo, ReturnSetInfo))
+		ereport(ERROR,
+				(errcode(ERRCODE_FEATURE_NOT_SUPPORTED),
+				 errmsg("set-valued function called in context that cannot accept a set")));
+	if (!(rsinfo->allowedModes & SFRM_Materialize))
+		ereport(ERROR,
+				(errcode(ERRCODE_FEATURE_NOT_SUPPORTED),
+				 errmsg("materialize mode required, but it is not " \
+						"allowed in this context")));
+
+	/* Switch into long-lived context to construct returned data structures */
+	per_query_ctx = rsinfo->econtext->ecxt_per_query_memory;
+	oldcontext = MemoryContextSwitchTo(per_query_ctx);
+
+	/* Build a tuple descriptor for function's result type */
+	if (get_call_result_type(fcinfo, NULL, &tupdesc) != TYPEFUNC_COMPOSITE)
+		elog(ERROR, "return type must be a row type");
+
+	tupstore = tuplestore_begin_heap(true, false, work_mem);
+	rsinfo->returnMode = SFRM_Materialize;
+	rsinfo->setResult = tupstore;
+	rsinfo->setDesc = tupdesc;
+
+	MemoryContextSwitchTo(oldcontext);
+
+	/* firebird_fdw version */
+	memset(values, 0, sizeof(values));
+	memset(nulls, 0, sizeof(nulls));
+
+	initStringInfo(&setting);
+	appendStringInfo(&setting,
+					 "%i", FIREBIRD_FDW_VERSION);
+
+	values[0] = CStringGetTextDatum("firebird_fdw_version");
+	values[1] = CStringGetTextDatum(setting.data);
+
+	tuplestore_putvalues(tupstore, tupdesc, values, nulls);
+	pfree(setting.data);
+
+	/* firebird_fdw version string*/
+	memset(values, 0, sizeof(values));
+	memset(nulls, 0, sizeof(nulls));
+
+	values[0] = CStringGetTextDatum("firebird_fdw_version_string");
+	values[1] = CStringGetTextDatum(FIREBIRD_FDW_VERSION_STRING);
+
+	tuplestore_putvalues(tupstore, tupdesc, values, nulls);
+
+
+	/* libfq version */
+
+	memset(values, 0, sizeof(values));
+	memset(nulls, 0, sizeof(nulls));
+
+	initStringInfo(&setting);
+	appendStringInfo(&setting,
+					 "%i", FQlibVersion());
+
+	values[0] = CStringGetTextDatum("libfq_version");
+	values[1] = CStringGetTextDatum(setting.data);
+
+	tuplestore_putvalues(tupstore, tupdesc, values, nulls);
+	pfree(setting.data);
+
+	/* libfq version string*/
+	memset(values, 0, sizeof(values));
+	memset(nulls, 0, sizeof(nulls));
+
+	values[0] = CStringGetTextDatum("libfq_version_string");
+	values[1] = CStringGetTextDatum(FQlibVersionString());
+
+	tuplestore_putvalues(tupstore, tupdesc, values, nulls);
+
+	/* no more rows */
+	tuplestore_donestoring(tupstore);
+
+	return (Datum) 0;
 }
 
 
